// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateUser: reducer create user on failure 1`] = `
Object {
  "error": "ERROR",
  "spinning": false,
}
`;

exports[`CreateUser: reducer create user on request 1`] = `
Object {
  "spinning": true,
}
`;

exports[`CreateUser: reducer create user on success 1`] = `
Object {
  "error": false,
  "response": undefined,
  "spinning": false,
}
`;

exports[`CreateUser: reducer reset error 1`] = `
Object {
  "compileSuccess": false,
  "error": null,
}
`;

exports[`CreateUser: reducer set initial state 1`] = `
Object {
  "error": false,
  "spinning": false,
}
`;
